MetaPreview info scrollbar style fixed

--- a/src/common/MetaPreview/styles.less
+++ b/src/common/MetaPreview/styles.less
@@ -56,22 +56,20 @@
         overflow-y: auto;
 
         &:hover {
-            &:global(::-webkit-scrollbar-thumb) {
+            &::-webkit-scrollbar-thumb {
                 background-color: @color-secondaryvariant2-light1;
-
             }
 
-            &:global(::-webkit-scrollbar-track) {
+            &::-webkit-scrollbar-track {
                 background-color: @color-background-dark2;
             }
         }
 
-        &:global(::-webkit-scrollbar-thumb) {
+        &::-webkit-scrollbar-thumb {
             background-color: transparent;
-
         }
 
-        &:global(::-webkit-scrollbar-track) {
+        &::-webkit-scrollbar-track {
             background-color: transparent;
         }
 
